--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,22 @@
     <!--<color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>-->
-    <color name="colorPrimary">#000000</color>
-    <color name="colorPrimaryDark">#333333</color>
-    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorPrimary">#0078CC</color>
+    <color name="colorPrimaryDark">#7F0078CC</color>
+    <color name="colorAccent">#cc7800</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
+    <!--5%黑-->
+    <color name="black_a5">#0C000000</color>
+    <!--10%黑-->
+    <color name="black_a10">#18000000</color>
+    <!--30%黑-->
+    <color name="black_a30">#44000000</color>
+    <!--50%黑-->
+    <color name="black_a50">#7F000000</color>
+    <!--80%黑-->
+    <color name="black_a80">#CC000000</color>
+
     <color name="color_333">#333333</color>
     <color name="color_999">#999999</color>
 </resources>
