--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>-->
     <color name="colorPrimary">#0078CC</color>
     <color name="colorPrimaryDark">#7F0078CC</color>
-    <color name="colorAccent">#cc7800</color>
+    <color name="colorAccent">#FF9900</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
     <!--5%黑-->
@@ -18,7 +18,12 @@
     <color name="black_a50">#7F000000</color>
     <!--80%黑-->
     <color name="black_a80">#CC000000</color>
-
+    <!--20%白-->
+    <color name="white_a20">#33FFFFFF</color>
+    <!--40%白-->
+    <color name="white_a40">#66FFFFFF</color>
+    <!--60%白-->
+    <color name="white_a60">#99FFFFFF</color>
     <color name="color_333">#333333</color>
     <color name="color_999">#999999</color>
 </resources>
