--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,2 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <dimen name="c_edit_height">42dp</dimen>
+    <dimen name="c_edit_divide_height">0.5dp</dimen>
+</resources>
