--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,6 @@
     <color name="white_a60">#99FFFFFF</color>
     <color name="color_333">#333333</color>
     <color name="color_999">#999999</color>
+    <color name="color_dc">#DCDCDC</color>
+    <color name="color_ef">#EFEFEF</color>
 </resources>
