--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -16,20 +16,17 @@
 
     </FrameLayout>
 
-    <com.flyco.tablayout.CommonTabLayout
-        android:id="@+id/base_ctl_bottom"
+    <View
+        android:id="@+id/base_v_divide"
         android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:background="#ffffff"
-        app:tl_iconHeight="23dp"
-        app:tl_iconMargin="0dp"
-        app:tl_iconWidth="16dp"
-        app:tl_indicator_color="@color/colorPrimary"
-        app:tl_indicator_height="0dp"
-        app:tl_textSelectColor="@color/colorPrimary"
-        app:tl_textUnselectColor="@color/black_a50"
-        app:tl_textsize="12sp"
-        app:tl_underline_color="#DDDDDD"
-        app:tl_underline_height="0dp" />
+        android:layout_height="0.5dp"
+        android:background="@color/color_dc" />
+
+    <cn.bpzzr.change.ui.view.BottomBar
+        android:id="@+id/base_bottom_bar"
+        android:layout_width="match_parent"
+        android:layout_height="62dp">
+
+    </cn.bpzzr.change.ui.view.BottomBar>
 
 </LinearLayout>
