--- a/app/src/main/res/layout/bottom_bar_tab_layout.xml
+++ b/app/src/main/res/layout/bottom_bar_tab_layout.xml
@@ -14,6 +14,7 @@
             android:id="@+id/bottom_tab_icon"
             android:layout_width="42dp"
             android:layout_height="42dp"
+            android:scaleType="centerInside"
             android:src="@drawable/maintab_stack_icon" />
 
         <TextView
@@ -44,7 +45,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="6dp"
         android:text="首页"
         android:textSize="14sp" />
 </LinearLayout>
