some test for refresh fragment

--- a/app/src/main/res/layout/base_fragment_refresh.xml
+++ b/app/src/main/res/layout/base_fragment_refresh.xml
@@ -22,7 +22,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/m_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/colorWhite">
 
         </android.support.v7.widget.RecyclerView>
     </in.srain.cube.views.ptr.PtrClassicFrameLayout>
