--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,13 +6,42 @@
     android:layout_height="match_parent"
     tools:context="cn.bpzzr.change.ui.activity.guide.SplashActivity">
 
+    <SurfaceView
+        android:id="@+id/splash_sv"
+        android:layout_width="match_parent"
+        android:layout_height="550dp"
+
+        />
+
+    <ImageView
+        android:id="@+id/splash_iv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY" />
+
+
+    <TextView
+        android:id="@+id/splash_tv_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/black_c_a50_bg"
+        android:paddingBottom="5dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:paddingTop="5dp"
+        android:textColor="@color/colorWhite" />
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/splash_word"
-        android:textSize="25sp"
         android:textColor="@color/color_333"
-        />
+        android:textSize="25sp"
+        android:visibility="gone" />
 
 </FrameLayout>
