--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,6 +4,6 @@
         <item>首页</item>
         <item>分类</item>
         <item>发现</item>
-        <!--<item>我的</item>-->
+        <item>我的</item>
     </string-array>
 </resources>
