some test for cookie

--- a/app/src/main/res/layout/base_banner_layout.xml
+++ b/app/src/main/res/layout/base_banner_layout.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.youth.banner.Banner xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    app:banner_default_image="@color/color_ef"
-    app:indicator_drawable_selected="@drawable/round_selected_white"
-    app:indicator_drawable_unselected="@drawable/circle_dot_unselected_white_a"
-    app:indicator_height="30dp"
-    app:indicator_margin="5dp"
-    app:is_auto_play="true"
-    app:scroll_time="3000">
+    android:layout_height="wrap_content">
 
-</com.youth.banner.Banner>
+    <com.youth.banner.Banner
+        android:id="@+id/base_banner"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:banner_default_image="@color/color_ef"
+        app:indicator_drawable_selected="@drawable/round_selected_white"
+        app:indicator_drawable_unselected="@drawable/circle_dot_unselected_white_a"
+        app:indicator_height="5dp"
+        app:indicator_margin="5dp"
+        app:is_auto_play="true"
+        app:scroll_time="3000">
+
+    </com.youth.banner.Banner>
+
+</FrameLayout>
