--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="c_edit_height">42dp</dimen>
     <dimen name="c_edit_divide_height">0.5dp</dimen>
+    <dimen name="dp200">200dp</dimen>
+    <dimen name="dp_62">62dp</dimen>
 </resources>
