--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -2,7 +2,13 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+
+    >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btn_setting"
@@ -12,4 +18,13 @@
         android:text="@string/setting"
         android:textColor="@color/colorWhite"
         android:textSize="16sp" />
+
+    <cn.bpzzr.change.ui.view.LinearContainer
+        android:id="@+id/lc_con"
+        android:layout_width="match_parent"
+        android:layout_height="42dp"
+        android:orientation="horizontal">
+
+    </cn.bpzzr.change.ui.view.LinearContainer>
+    </LinearLayout>
 </ScrollView>
