--- a/app/src/main/res/layout/drop_down_layout.xml
+++ b/app/src/main/res/layout/drop_down_layout.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ll_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <!--筛选条件容器-->
-    <LinearLayout
-        android:id="@+id/ll_filter_condition"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-    </LinearLayout>
 
     <!--页面容器，不同条件对应不同页面-->
     <FrameLayout
