--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -8,7 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btn_setting"
@@ -16,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/setting"
+        android:visibility="gone"
         android:textColor="@color/colorWhite"
         android:textSize="16sp" />
 
@@ -23,7 +25,9 @@
         android:id="@+id/lc_con"
         android:layout_width="match_parent"
         android:layout_height="42dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@color/color_ef"
+        >
 
     </cn.bpzzr.change.ui.view.LinearContainer>
     </LinearLayout>
