some test for kai shu story

--- a/app/src/main/res/layout/drop_down_select_one.xml
+++ b/app/src/main/res/layout/drop_down_select_one.xml
@@ -13,6 +13,7 @@
         android:scrollbarStyle="outsideOverlay"
         android:scrollbarThumbVertical="@color/colorPrimary"
         android:scrollbarSize="2dp"
+        android:background="@color/colorWhite"
         >
 
     </android.support.v7.widget.RecyclerView>
