--- a/app/src/main/res/layout/fragment_discovery.xml
+++ b/app/src/main/res/layout/fragment_discovery.xml
@@ -5,6 +5,7 @@
     >
 
     <TextView
+        android:id="@+id/tv_discovery"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="发现"
