--- a/app/src/main/res/layout/fragment_discovery.xml
+++ b/app/src/main/res/layout/fragment_discovery.xml
@@ -6,10 +6,11 @@
 
     <TextView
         android:id="@+id/tv_discovery"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="发现"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@android:color/white"
+        android:padding="10dp"
         android:textSize="30sp"
         />
 
