--- a/myuilibrary/src/main/res/values/attrs.xml
+++ b/myuilibrary/src/main/res/values/attrs.xml
@@ -3,10 +3,10 @@
     <declare-styleable name="PTextView">
         <attr name="pColor" format="color" />
         <attr name="pCornerRadius" format="dimension" />
-        <attr name="pLeftTopCornerRadius" format="dimension" />
-        <attr name="pRightTopCornerRadius" format="dimension" />
-        <attr name="pRightBottomCornerRadius" format="dimension" />
-        <attr name="pLeftBottomCornerRadius" format="dimension" />
+        <attr name="pLeftTopCRadius" format="dimension" />
+        <attr name="pRightTopCRadius" format="dimension" />
+        <attr name="pRightBottomCRadius" format="dimension" />
+        <attr name="pLeftBottomCRadius" format="dimension" />
         <attr name="strokeColor" format="color" />
         <attr name="strokeWidth" format="dimension" />
     </declare-styleable>
